# wagtail-airtable

./: .gitignore  CHANGELOG.md  CHANGELOG.txt  MANIFEST.in  README.md  README.rst  known-issues.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml  publish.yml
examples/: README.md  model_example.py  multi_page_example.py  page_example.py  serializers.py  settings.py
tests/: mock_airtable.py  models.py  serializers.py  settings.py  test_import.py  test_models.py  test_templatetags.py  test_utils.py  test_views.py  urls.py
tests/fixtures/: test.json
tests/migrations/: 0001_initial.py  0002_modelnotused.py  0003_similartoadvert.py  0004_advert_publications.py  0004_auto_20220526_2254.py  0005_simplepage_airtable_record_id.py
wagtail_airtable/: apps.py  forms.py  importer.py  mixins.py  serializers.py  tests.py  utils.py  views.py  wagtail_hooks.py
wagtail_airtable/management/commands/: import_airtable.py  reset_local_airtable_records.py
wagtail_airtable/templates/wagtail_airtable/: _import_button.html  airtable_import_listing.html
wagtail_airtable/templates/wagtailsnippets/snippets/: index.html  type_index.html
wagtail_airtable/templatetags/: wagtail_airtable_tags.py
