[tool.poetry]
name = "wagtail-airtable"
version = "0.6.0"
description = "Sync data between Wagtail and Airtable"
readme = "README.rst"
authors = ["Kalob Taulien <kalob.taulien@torchbox.com>"]
homepage = "https://github.com/wagtail/wagtail-airtable"
repository = "https://github.com/wagtail/wagtail-airtable"
documentation = "https://github.com/wagtail/wagtail-airtable/blob/master/README.md"
keywords = ["wagtail", "airtable"]
classifiers=[
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Framework :: Django',
    'Framework :: Django :: 3',
    'Framework :: Django :: 4',
    'Framework :: Wagtail',
    'Framework :: Wagtail :: 4',
]
packages = [
    { include = "wagtail_airtable" },
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
wagtail = ">=4.1"
airtable-python-wrapper = "~0.13.0"
djangorestframework = ">=3.11.0"
django = ">=3.2"

[tool.poetry.dev-dependencies]
tox = ">=3.27"

[build-system]
requires = ["poetry-core>=1.0.8", ]
build-backend = "poetry.core.masonry.api"
